[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secops-triage-env"
version = "1.0.0"
description = "An enterprise-grade SecOps Triage environment for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]